--- a/q/276019.html
+++ b/q/276019.html
@@ -26,15 +26,23 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>015</td><td>Japt x</td><td>241010T190412Z</td><td><a href="https://codegolf.stackexchange.com/questions/276019/how-many-dots-are-there/276022#276022">Shaggy</a></td></tr>
-<tr d-ix="1"><td>059</td><td>Google Sheets</td><td>241010T193521Z</td><td><a href="https://codegolf.stackexchange.com/questions/276019/how-many-dots-are-there/276027#276027">doubleun</a></td></tr>
-<tr d-ix="2"><td>029</td><td>APL+WIN</td><td>241010T193010Z</td><td><a href="https://codegolf.stackexchange.com/questions/276019/how-many-dots-are-there/276026#276026">Graham</a></td></tr>
-<tr d-ix="3"><td>013</td><td>Jelly</td><td>241010T192113Z</td><td><a href="https://codegolf.stackexchange.com/questions/276019/how-many-dots-are-there/276024#276024">Jonathan</a></td></tr>
-<tr d-ix="4"><td>049</td><td>JavaScript ES6</td><td>241010T192724Z</td><td><a href="https://codegolf.stackexchange.com/questions/276019/how-many-dots-are-there/276025#276025">Arnauld</a></td></tr>
-<tr d-ix="5"><td>015</td><td>MATL</td><td>241010T190850Z</td><td><a href="https://codegolf.stackexchange.com/questions/276019/how-many-dots-are-there/276023#276023">Luis Men</a></td></tr>
-<tr d-ix="6"><td>050</td><td>JavaScript Node.js</td><td>241010T184724Z</td><td><a href="https://codegolf.stackexchange.com/questions/276019/how-many-dots-are-there/276021#276021">l4m2</a></td></tr>
+<tr d-ix="0"><td>048</td><td>R</td><td>241010T194550Z</td><td><a href="https://codegolf.stackexchange.com/questions/276019/how-many-dots-are-there/276028#276028">pajonk</a></td></tr>
+<tr d-ix="1"><td>015</td><td>Japt x</td><td>241010T190412Z</td><td><a href="https://codegolf.stackexchange.com/questions/276019/how-many-dots-are-there/276022#276022">Shaggy</a></td></tr>
+<tr d-ix="2"><td>059</td><td>Google Sheets</td><td>241010T193521Z</td><td><a href="https://codegolf.stackexchange.com/questions/276019/how-many-dots-are-there/276027#276027">doubleun</a></td></tr>
+<tr d-ix="3"><td>029</td><td>APL+WIN</td><td>241010T193010Z</td><td><a href="https://codegolf.stackexchange.com/questions/276019/how-many-dots-are-there/276026#276026">Graham</a></td></tr>
+<tr d-ix="4"><td>013</td><td>Jelly</td><td>241010T192113Z</td><td><a href="https://codegolf.stackexchange.com/questions/276019/how-many-dots-are-there/276024#276024">Jonathan</a></td></tr>
+<tr d-ix="5"><td>049</td><td>JavaScript ES6</td><td>241010T192724Z</td><td><a href="https://codegolf.stackexchange.com/questions/276019/how-many-dots-are-there/276025#276025">Arnauld</a></td></tr>
+<tr d-ix="6"><td>015</td><td>MATL</td><td>241010T190850Z</td><td><a href="https://codegolf.stackexchange.com/questions/276019/how-many-dots-are-there/276023#276023">Luis Men</a></td></tr>
+<tr d-ix="7"><td>050</td><td>JavaScript Node.js</td><td>241010T184724Z</td><td><a href="https://codegolf.stackexchange.com/questions/276019/how-many-dots-are-there/276021#276021">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-x</code></a>, <s>17</s> <s>16</s> 15 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 48 bytes</h1>
+<pre class="lang-r prettyprint-override"><code>\(s,`[`=gsub)nchar(&quot;:&quot;[&quot;x2&quot;,&quot;[^ij.;!?:]&quot;[&quot;&quot;,s]])
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=ddDNSsNAEAdwPOpTTFeQBKLEilIipQcRLx4KHmNKt9ndZOtuNu6HJnkVL6ngQ-nTmBipoPV_GZjd3zDMy0a3r2z65iw7nryH954JlvFymhm38os0x9pDEYpRNUYBihd8fXI5mkVJ10GBSRJ_cB9718xDd2XOiwoUg5XA6QM8OqxtE8DakYyCrOFJPY-QfwhfOTvoyK3SVAIvjZMRECWUBsMtYEntbPtzm_OezLXKNJaSFxnMXdMIauAIrhShcKME-6VOe_K99d-BOzPpSUk1T7EmXElKODaWF9xy88-Ii54wpSUWhOY1ocaJMldVLbClu03Yk-5p_ycQDtds26F-Ag" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Slightly ungolfed (+1 byte):
+<code>\(s)nchar(gsub(&quot;:&quot;,&quot;x2&quot;,gsub(&quot;[^ij.;!?:]&quot;,&quot;&quot;,s)))</code></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-x</code></a>, <s>17</s> <s>16</s> 15 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <p>This would be <a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=2.0a0&amp;flags=LXg&amp;code=IiEuOjo7P2lqIqyj6Fg&amp;input=IkxvcmVtIGlwc3VtOiBkb2xvciBzaXQgYW1ldD8i" rel="nofollow noreferrer">14 bytes</a> in v2 but there seems to be a bug with <code>S.è(x)</code> that only counts a maximum of 1 of <code>x</code>.</p>
 <p>Takes input as an array of characters.</p>
 <pre><code>&quot;!.::;?ij&quot;¬£è¶X
@@ -49,20 +57,20 @@
                :Implicit output of sum of resulting array
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1>Google Sheets, 59 bytes</h1>
+<div id="pu2" class="pu"><h1>Google Sheets, 59 bytes</h1>
 <pre><code>=len(regexreplace(regexreplace(A1,&quot;[^ij.;!?:]&quot;,),&quot;:&quot;,&quot;::&quot;))
 </code></pre>
 <p>The same in JavaScript (non-competing, <strong>58 bytes</strong>):</p>
 <pre class="lang-js prettyprint-override"><code>f=t=&gt;t.replace(/[^ij.;!?:]/g,'').replace(/:/g,'::').length
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1>APL+WIN, 29 bytes</h1>
+<div id="pu3" class="pu"><h1>APL+WIN, 29 bytes</h1>
 <p>Prompts for string:</p>
 <pre><code>(+/s∊'ij.;!?.')+2×+/(s←⎕)∊':'
 </code></pre>
 <p><a href="https://tio.run/##Jc4xTsMwFMbx3ad4XXCr0FbAFoYODAipiEqc4BE7ySt2XrAdaHIAqBgQC@JA3CQXCcZsf@n7DR@2Zql6NFwtC4PeUzGNH1@32/H180LEurmLdSbG41s5zbO1H4/vkvary9lmJRfZ@c93tp77SCJd/G25nKIVUynkfVtTcwAu4cFg8QhPHbownMK@U5UG28Mzv8ykiHLLTlug1nc2B8WGHXgKgFaHTQI7x5VDa6mpYNcNg9EeTuCKlYZrNmUy/6/y1K12VKBTxFYrQh@ooUA@bSU7i0bpulfad6at@dAbDDqNUohf" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 14 </s> 13 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 14 </s> 13 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ċⱮ“::ij.;!?”S
 </code></pre>
 <p>A monadic Link that accepts a list of characters and yields the number of dots.</p>
@@ -75,14 +83,14 @@
             S - sum
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1>JavaScript (ES6), 49 bytes</h1>
+<div id="pu5" class="pu"><h1>JavaScript (ES6), 49 bytes</h1>
 <p>Expects an array of characters.</p>
 
 <pre class="lang-none prettyprint-override"><code>a=&gt;a.map(c=&gt;t+=c==&quot;:&quot;?2:/[ij.;!?]/.test(c),t=0)|t
 </code></pre>
 <p><a href="https://tio.run/##hc@xTsMwFAXQna949YASUZwCAqEgNwMDC0MlxqrDw3ZSFzsv2E5pIv49IFGEQJa4H3DuvTvcY5DedPG8JaWnWkwolsgddpkUy3gmpBCsZNVlWazNjt/Nqk3Bow4xk/k8ikX@HidJbSCruaUmq7M155w9dVvTHoBqeLYoX@C1Rx/HOex61WhwA@zpbcY2eQ5FAVcnCeGRvHZgutC7EhRZ8hBMBHQ6Vgy@cxSuU8LKU@PROdM2sOrH0eoAp3D/eRMeyNbsl3CREr4Olz91yRyF25TQaW8kemXIaWUwRNOaaAJLCjcpoSbv0Cq9HZQOve22dBgsRs1SwiIl/DP/jzB9AA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, 15 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, 15 bytes</h1>
 <pre><code>0h'ij.;!?::'!=z
 </code></pre>
 <p><a href="https://tio.run/##y00syfn/3yBDPTNLz1rR3spKXdG26v9/9eCCjMy8CoX8NIWknMTkbIXC0sSikiodhazSlPRUhdxKhbL8ckV1AA" rel="nofollow noreferrer">Try it online!</a> Or <a href="https://tio.run/##Lc27CsJAEIXh3qeYNG4jYh2RFAo2FoI@gGN2kozuZOJe1OTl4xZ2B74Dv2B0823edIYf621RlaUpdtN8uM7mMnTcf0EbuDusn/BK6OO0gkeyLYGM8NZPYRbmpJ4EeAhJSrDq1EPgCCgUq8xnr61HEe5bOKdpchRgCXu1BEd1TX78y3kN5LlGb1mFLGOI3HPkkKVRL@gsdaOlkNzQ6Xd0GCmT@QE" rel="nofollow noreferrer">verify all test cases</a>.</p>
@@ -94,7 +102,7 @@
 z          % Number of non-zeros. Implicit display
 </code></pre>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 50 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 50 bytes</h1>
 
 <pre class="lang-none prettyprint-override"><code>x=&gt;[...'ij.;!?::'].flatMap(c=&gt;x.split(c)).length-8
 </code></pre>
